--- a/faq.html
+++ b/faq.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <link href="img/favicon.png" rel="shortcut icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="css/main.css?v=52364" rel="stylesheet" type="text/css">
-    <script src="js/main.js?v=52364" type="text/javascript"></script>
+    <link href="css/main.css?v=29706" rel="stylesheet" type="text/css">
+    <script src="js/main.js?v=29706" type="text/javascript"></script>
     <!-- Meta tags facebook-->
     <meta property="og:title" content="#">
     <meta property="og:description" content="#">
@@ -24,7 +24,8 @@
       <div class="header__primary">
         <div class="header__wrap">
           <div class="header__inner">
-            <div class="header__logo"><a href="index.html"><img src="img/icons/logo-valoramas.svg"></a></div>
+            <div class="header__logo header__logo--color"><a href="index.html"><img src="img/icons/logo-valoramas-white.svg"></a></div>
+            <div class="header__logo header__logo--white"><a href="index.html"><img src="img/icons/logo-valoramas.svg"></a></div>
             <div class="header__nav">
               <div class="header__nav__bg"></div>
               <div class="header__nav__nav">
@@ -47,7 +48,7 @@
                       <li><a href="brands.html">Empresas adheridas</a></li>
                       <li><a href="news.html">Noticias</a></li>
                       <li><a href="faq.html">FAQ</a></li>
-                      <li><a href="#">Contacto</a></li>
+                      <li><a data-goto=".section--contact">Contacto</a></li>
                     </ul>
                   </nav>
                 </div>
@@ -62,7 +63,7 @@
               <div class="header__nav__opacity"> </div>
               <div class="header__nav__nav"> 
                 <div class="header__nav__nav__header"> 
-                  <div class="header__nav__isotipo"> <img src="img/icons/logo-valoramas.svg"></div>
+                  <div class="header__nav__isotipo"> <img src="img/icons/logo-valoramas-white.svg"></div>
                   <div class="header__nav__close">
                     <div></div>
                     <div></div>
@@ -83,7 +84,7 @@
                       <li><a href="#">Empresas adheridas</a></li>
                       <li><a href="#">Noticias</a></li>
                       <li><a href="#">FAQ</a></li>
-                      <li><a href="#">Contacto</a></li>
+                      <li><a data-goto=".section--contact">Contacto</a></li>
                     </ul>
                   </div>
                 </div>
@@ -111,7 +112,7 @@
         <div class="section__wrap"> 
           <div class="section__body"> 
             <div class="section__faq"> 
-              <div class="cols">
+              <div class="cols cols-gutter-2">
                 <div class="col-md-6"> 
                   <article class="article--faq">
                     <div class="article__bg"> 
@@ -119,7 +120,7 @@
                     </div>
                     <div class="article__body">
                       <h3 class="article__title">¿Cómo te podemos recolectar?</h3>
-                      <p class="article__description">Etiam est iaculis posuere ullamcorper risus purus massa laoreet potenti fermentum sapien habitasse eros ligula.
+                      <p class="article__description">Himenaeos dictumst cubilia convallis eleifend imperdiet netus metus proin et. Suspendisse mauris purus congue mollis suscipit luctus porta commodo libero. Suscipit integer nam fames id primis etiam quisque gravida luctus sagittis porttitor vitae taciti arcu.
                       </p>
                     </div>
                   </article>
@@ -127,11 +128,11 @@
                 <div class="col-md-6"> 
                   <article class="article--faq">
                     <div class="article__bg"> 
-                      <div class="bg"> <img src="img/uploads/image-faq-2.png"></div>
+                      <div class="bg"> <img src="img/uploads/14.jpeg"></div>
                     </div>
                     <div class="article__body">
                       <h3 class="article__title">¿Importas y necesitas cumplir con la Ley REP?</h3>
-                      <p class="article__description">Lectus tempus placerat auctor velit felis pretium laoreet enim lacinia varius ad aenean quisque inceptos.
+                      <p class="article__description">Non duis libero vel consequat ad diam suscipit sollicitudin nunc. Urna integer ac massa in sed urna sodales massa habitasse. In fringilla iaculis aenean torquent himenaeos tristique risus molestie dictum facilisis diam primis non conubia.
                       </p>
                     </div>
                   </article>
@@ -139,11 +140,11 @@
                 <div class="col-md-6"> 
                   <article class="article--faq">
                     <div class="article__bg"> 
-                      <div class="bg"> <img src="img/uploads/image-faq-3.png"></div>
+                      <div class="bg"> <img src="img/uploads/13.jpeg"></div>
                     </div>
                     <div class="article__body">
                       <h3 class="article__title">¿Cuál es el rol del gestionador en la Ley REP?</h3>
-                      <p class="article__description">Rutrum lacus aliquam ut urna aliquet auctor libero condimentum orci inceptos scelerisque ligula massa curabitur.
+                      <p class="article__description">Maecenas urna fusce nec torquent torquent laoreet colus massa aenean. Aliquet eros sem mollis tempor etiam placerat nibh eu auctor. Tincidunt sem torquent justo cubilia pulvinar taciti nisl suscipit ornare colus eros porta mauris pretium.
                       </p>
                     </div>
                   </article>
@@ -151,11 +152,11 @@
                 <div class="col-md-6"> 
                   <article class="article--faq">
                     <div class="article__bg"> 
-                      <div class="bg"> <img src="img/uploads/image-faq-4.png"></div>
+                      <div class="bg"> <img src="img/uploads/14.jpeg"></div>
                     </div>
                     <div class="article__body">
                       <h3 class="article__title">El recauchaje también forma parte de nuestro modelo</h3>
-                      <p class="article__description">Iaculis euismod ultrices mattis est vehicula sed lacus maecenas nisl ligula odio mauris imperdiet dictumst.
+                      <p class="article__description">Cras ornare quam curae placerat etiam litora ligula potenti aliquet. Iaculis mollis quis dictum cursus enim fermentum habitasse gravida sodales. Diam netus fusce laoreet ligula mi inceptos interdum etiam purus tincidunt colus facilisis aptent habitasse.
                       </p>
                     </div>
                   </article>
@@ -196,19 +197,18 @@
                   </div>
                 </div>
                 <div class="col-md-3"> 
-                  <div class="footer__newsletter"> 
-                    <p class="footer__description">Me gustaría saber más de Valora+</p>
-                    <div class="footer__form"> 
-                      <div class="form__element"> 
-                        <div class="form__input"> 
-                          <input type="email" placeholder="Escriba email">
-                        </div>
-                        <div class="form__button"> 
-                          <button> <img src="img/icons/icon-submit.png"></button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                  <!--.footer__newsletter 
+                  p.footer__description Me gustaría saber más de Valora+
+                  .footer__form 
+                  	.form__element 
+                  		.form__input 
+                  			input(type="email" placeholder="Escriba email")
+                  		
+                  		.form__button 
+                  			button 
+                  				img(src="img/icons/icon-submit.png")
+                  
+                  -->
                 </div>
               </div>
             </div>
