--- a/ley-rep.html
+++ b/ley-rep.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <link href="img/favicon.png" rel="shortcut icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="css/main.css?v=89665" rel="stylesheet" type="text/css">
-    <script src="js/main.js?v=89665" type="text/javascript"></script>
+    <link href="css/main.css?v=76945" rel="stylesheet" type="text/css">
+    <script src="js/main.js?v=76945" type="text/javascript"></script>
     <!-- Meta tags facebook-->
     <meta property="og:title" content="#">
     <meta property="og:description" content="#">
@@ -24,7 +24,8 @@
       <div class="header__primary">
         <div class="header__wrap">
           <div class="header__inner">
-            <div class="header__logo"><a href="index.html"><img src="img/icons/logo-valoramas.svg"></a></div>
+            <div class="header__logo header__logo--color"><a href="index.html"><img src="img/icons/logo-valoramas-white.svg"></a></div>
+            <div class="header__logo header__logo--white"><a href="index.html"><img src="img/icons/logo-valoramas.svg"></a></div>
             <div class="header__nav">
               <div class="header__nav__bg"></div>
               <div class="header__nav__nav">
@@ -47,7 +48,7 @@
                       <li><a href="brands.html">Empresas adheridas</a></li>
                       <li><a href="news.html">Noticias</a></li>
                       <li><a href="faq.html">FAQ</a></li>
-                      <li><a href="#">Contacto</a></li>
+                      <li><a data-goto=".section--contact">Contacto</a></li>
                     </ul>
                   </nav>
                 </div>
@@ -62,7 +63,7 @@
               <div class="header__nav__opacity"> </div>
               <div class="header__nav__nav"> 
                 <div class="header__nav__nav__header"> 
-                  <div class="header__nav__isotipo"> <img src="img/icons/logo-valoramas.svg"></div>
+                  <div class="header__nav__isotipo"> <img src="img/icons/logo-valoramas-white.svg"></div>
                   <div class="header__nav__close">
                     <div></div>
                     <div></div>
@@ -83,7 +84,7 @@
                       <li><a href="#">Empresas adheridas</a></li>
                       <li><a href="#">Noticias</a></li>
                       <li><a href="#">FAQ</a></li>
-                      <li><a href="#">Contacto</a></li>
+                      <li><a data-goto=".section--contact">Contacto</a></li>
                     </ul>
                   </div>
                 </div>
@@ -171,7 +172,6 @@
         </div>
       </section>
       <section class="section--boards section--light"> 
-        <div class="section__eff section__eff--bottomright"><img src="img/uploads/eff-3.png"></div>
         <div class="section__wrap"> 
           <div class="section__body"> 
             <div class="cols">
@@ -265,9 +265,9 @@
                         <div class="bg"> <img src="img/uploads/8.png"></div>
                       </div>
                       <div class="article__body"><span class="article__date">19/11/2023</span>
-                        <h4 class="article__title">Neque aliquam scelerisque aliquam iaculis sagittis blandit quisque
+                        <h4 class="article__title">Rutrum vehicula ad purus vel enim porttitor ante
                         </h4>
-                        <p class="article__description">Nisi colus nibh purus potenti faucibus lectus etiam donec tristique. Enim elementum semper quis ut elementum taciti quis inceptos congue litora platea nibh id blandit.
+                        <p class="article__description">Quisque euismod euismod at suspendisse volutpat eros himenaeos faucibus suscipit. Tortor lobortis platea dictum vitae ut sollicitudin pharetra potenti volutpat consectetur hac aenean malesuada semper.
                         </p><a href="#" class="btn btn--transparent--orange btn--sm">Leer más<span class="fa fa-angle-right"></span></a>
                       </div>
                     </article>
@@ -278,9 +278,9 @@
                         <div class="bg"> <img src="img/uploads/9.png"></div>
                       </div>
                       <div class="article__body"><span class="article__date">19/11/2023</span>
-                        <h4 class="article__title">Vulputate nostra nibh ad vitae diam odio aptent
+                        <h4 class="article__title">Tristique enim tellus mattis taciti placerat colus odio
                         </h4>
-                        <p class="article__description">Metus curabitur laoreet molestie erat tortor nisi ullamcorper vel fusce. Pulvinar class malesuada dictumst commodo ultrices colus lobortis fringilla vitae felis auctor imperdiet quis per.
+                        <p class="article__description">Conubia libero vel per luctus consequat imperdiet suspendisse duis tempus. Id auctor sem auctor enim eros duis quam mollis ornare semper taciti duis condimentum ornare.
                         </p><a href="#" class="btn btn--transparent--orange btn--sm">Leer más<span class="fa fa-angle-right"></span></a>
                       </div>
                     </article>
@@ -291,9 +291,9 @@
                         <div class="bg"> <img src="img/uploads/10.png"></div>
                       </div>
                       <div class="article__body"><span class="article__date">19/11/2023</span>
-                        <h4 class="article__title">Vel morbi etiam condimentum erat himenaeos a ut
+                        <h4 class="article__title">Felis pellentesque inceptos hendrerit elementum varius vel turpis
                         </h4>
-                        <p class="article__description">Fermentum leo faucibus ac mattis justo nulla arcu volutpat vehicula. Integer magna arcu fermentum turpis iaculis phasellus cursus sociosqu ut nam phasellus potenti fusce vivamus.
+                        <p class="article__description">Adipiscing rhoncus purus hendrerit eu lacinia dapibus fringilla dictumst tortor. Curae blandit sem eros ut elit curabitur phasellus pellentesque senectus gravida semper nostra bibendum luctus.
                         </p><a href="#" class="btn btn--transparent--orange btn--sm">Leer más<span class="fa fa-angle-right"></span></a>
                       </div>
                     </article>
@@ -304,9 +304,9 @@
                         <div class="bg"> <img src="img/uploads/8.png"></div>
                       </div>
                       <div class="article__body"><span class="article__date">19/11/2023</span>
-                        <h4 class="article__title">Fermentum et pellentesque sollicitudin curae eu magna ultrices
+                        <h4 class="article__title">Metus pellentesque sociosqu libero aliquam ligula est ut
                         </h4>
-                        <p class="article__description">Vivamus quisque at facilisis dictum mauris mi pulvinar volutpat sollicitudin. Bibendum nulla suscipit bibendum curabitur integer sed proin dui sodales phasellus imperdiet urna maecenas netus.
+                        <p class="article__description">Ac blandit vestibulum platea tempus tempus ullamcorper nullam suscipit rutrum. Etiam curae cras a donec vestibulum potenti quis ut suscipit est porta maecenas fermentum venenatis.
                         </p><a href="#" class="btn btn--transparent--orange btn--sm">Leer más<span class="fa fa-angle-right"></span></a>
                       </div>
                     </article>
@@ -317,9 +317,9 @@
                         <div class="bg"> <img src="img/uploads/9.png"></div>
                       </div>
                       <div class="article__body"><span class="article__date">19/11/2023</span>
-                        <h4 class="article__title">Accumsan curabitur porta morbi mattis rhoncus volutpat rhoncus
+                        <h4 class="article__title">Lobortis sollicitudin ut maecenas euismod sapien rhoncus lobortis
                         </h4>
-                        <p class="article__description">Per suspendisse conubia hendrerit nibh metus convallis litora gravida ante. Aenean litora urna conubia placerat lobortis odio magna risus torquent purus fames nam primis feugiat.
+                        <p class="article__description">Fermentum nisl pharetra convallis rhoncus feugiat tempus porttitor pharetra porta. Eget gravida mi commodo dictumst platea nec tristique metus massa nam blandit imperdiet massa interdum.
                         </p><a href="#" class="btn btn--transparent--orange btn--sm">Leer más<span class="fa fa-angle-right"></span></a>
                       </div>
                     </article>
@@ -330,9 +330,9 @@
                         <div class="bg"> <img src="img/uploads/10.png"></div>
                       </div>
                       <div class="article__body"><span class="article__date">19/11/2023</span>
-                        <h4 class="article__title">Colus non facilisis mauris aliquet per blandit consequat
+                        <h4 class="article__title">Ultricies orci placerat aenean fermentum nam elementum sapien
                         </h4>
-                        <p class="article__description">Torquent quisque nulla arcu semper commodo maecenas porta egestas mauris. Est diam habitasse laoreet quis mattis ad risus semper odio lacus hendrerit class in eget.
+                        <p class="article__description">Urna aliquam sollicitudin porttitor rhoncus etiam dictum suscipit porttitor tellus. Class adipiscing consequat dui dictum habitant sed cursus tincidunt proin habitasse sociosqu urna vivamus venenatis.
                         </p><a href="#" class="btn btn--transparent--orange btn--sm">Leer más<span class="fa fa-angle-right"></span></a>
                       </div>
                     </article>
@@ -374,19 +374,18 @@
                   </div>
                 </div>
                 <div class="col-md-3"> 
-                  <div class="footer__newsletter"> 
-                    <p class="footer__description">Me gustaría saber más de Valora+</p>
-                    <div class="footer__form"> 
-                      <div class="form__element"> 
-                        <div class="form__input"> 
-                          <input type="email" placeholder="Escriba email">
-                        </div>
-                        <div class="form__button"> 
-                          <button> <img src="img/icons/icon-submit.png"></button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                  <!--.footer__newsletter 
+                  p.footer__description Me gustaría saber más de Valora+
+                  .footer__form 
+                  	.form__element 
+                  		.form__input 
+                  			input(type="email" placeholder="Escriba email")
+                  		
+                  		.form__button 
+                  			button 
+                  				img(src="img/icons/icon-submit.png")
+                  
+                  -->
                 </div>
               </div>
             </div>
