--- a/single-new.html
+++ b/single-new.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <link href="img/favicon.png" rel="shortcut icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="css/main.css?v=82462" rel="stylesheet" type="text/css">
-    <script src="js/main.js?v=82462" type="text/javascript"></script>
+    <link href="css/main.css?v=52866" rel="stylesheet" type="text/css">
+    <script src="js/main.js?v=52866" type="text/javascript"></script>
     <!-- Meta tags facebook-->
     <meta property="og:title" content="#">
     <meta property="og:description" content="#">
@@ -24,7 +24,8 @@
       <div class="header__primary">
         <div class="header__wrap">
           <div class="header__inner">
-            <div class="header__logo"><a href="index.html"><img src="img/icons/logo-valoramas.svg"></a></div>
+            <div class="header__logo header__logo--color"><a href="index.html"><img src="img/icons/logo-valoramas-white.svg"></a></div>
+            <div class="header__logo header__logo--white"><a href="index.html"><img src="img/icons/logo-valoramas.svg"></a></div>
             <div class="header__nav">
               <div class="header__nav__bg"></div>
               <div class="header__nav__nav">
@@ -47,7 +48,7 @@
                       <li><a href="brands.html">Empresas adheridas</a></li>
                       <li><a href="news.html">Noticias</a></li>
                       <li><a href="faq.html">FAQ</a></li>
-                      <li><a href="#">Contacto</a></li>
+                      <li><a data-goto=".section--contact">Contacto</a></li>
                     </ul>
                   </nav>
                 </div>
@@ -62,7 +63,7 @@
               <div class="header__nav__opacity"> </div>
               <div class="header__nav__nav"> 
                 <div class="header__nav__nav__header"> 
-                  <div class="header__nav__isotipo"> <img src="img/icons/logo-valoramas.svg"></div>
+                  <div class="header__nav__isotipo"> <img src="img/icons/logo-valoramas-white.svg"></div>
                   <div class="header__nav__close">
                     <div></div>
                     <div></div>
@@ -83,7 +84,7 @@
                       <li><a href="#">Empresas adheridas</a></li>
                       <li><a href="#">Noticias</a></li>
                       <li><a href="#">FAQ</a></li>
-                      <li><a href="#">Contacto</a></li>
+                      <li><a data-goto=".section--contact">Contacto</a></li>
                     </ul>
                   </div>
                 </div>
@@ -95,53 +96,58 @@
     </header>
     <div id="sections">
       <section class="section--headernew">
+        <div class="section__bg">
+          <div class="bg"><img src="img/uploads/background-bg-2.png"></div>
+        </div>
         <div class="section__wrap">
-          <div class="section__header"> <a href="#" class="btn">Volver a noticias <span class="fa fa-angle-left"></span></a></div>
+          <div class="section__header"> <a href="#" class="btn btn--transparent--cyan">Volver a noticias <span class="fa fa-angle-left"></span></a></div>
           <div class="section__body">
-            <div class="cols"> 
-              <div class="col-md-6">
-                <div class="section__image"> <img src="img/uploads/8.png"></div>
-              </div>
-              <div class="col-md-6">
-                <div class="section__content">
-                  <p class="section__subtitle">Noticias</p>
-                  <h1 class="section__title">Aduanas emitirá una resolución que afectará a importaciones de Neumáticos</h1>
-                  <p class="section__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud</p>
+            <div class="cols">
+              <div class="section__flex"> 
+                <div class="col-md-6">
+                  <div class="section__image"> <img src="img/uploads/image-single-new.png"></div>
+                </div>
+                <div class="col-md-6">
+                  <div class="section__content">
+                    <p class="section__subtitle">Noticias</p>
+                    <h1 class="section__title">Aduanas emitirá una resolución que afectará a importaciones de Neumáticos</h1>
+                    <p class="section__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud</p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section class="section--content"> 
+      <section class="section--content">
         <div class="section__wrap"> 
           <div class="section__body">
             <div class="section__loadmore">
               <div class="section__content wp">
-                <p>Lectus non taciti duis odio elit pellentesque congue scelerisque ad. Pulvinar potenti bibendum cubilia libero varius nisl consectetur tempus dictumst. Etiam tempor conubia adipiscing interdum lacus malesuada nostra himenaeos massa tortor fusce erat vivamus interdum.
+                <p>Mollis nibh torquent vehicula ad turpis justo vehicula inceptos netus. Placerat libero est nec suscipit sed integer felis fermentum feugiat. At nostra auctor integer urna habitant nunc hac neque pulvinar. Euismod non nisi habitasse quisque sagittis ullamcorper habitant orci leo. Nullam scelerisque a est posuere nam sed hac sem viverra. Adipiscing imperdiet curae dui nunc convallis ad quisque pulvinar habitant tempus nibh velit aenean mauris.
                 </p>
-                <p>Mattis justo duis erat euismod nam blandit faucibus colus posuere. Lobortis adipiscing maecenas aptent rhoncus velit nec fermentum fringilla colus. Ligula adipiscing consequat orci quisque felis curabitur et accumsan ultrices. Suscipit laoreet urna gravida dictum fusce fringilla convallis semper euismod mollis elementum fermentum luctus commodo.
+                <p>Odio aptent etiam luctus fusce nulla ac aliquam velit felis. Non quis congue cursus pretium praesent auctor ac fringilla dictum. Blandit quisque hac a consequat morbi mi odio laoreet metus. Suspendisse sodales aenean fermentum cras primis porttitor curae faucibus primis. Litora litora velit mauris lacinia suspendisse tempor justo posuere placerat. Fusce primis dui facilisis viverra feugiat sed mollis sem inceptos. Habitasse luctus augue eget consequat lobortis nec placerat scelerisque ornare. Aliquet tempus ut sodales consectetur egestas convallis molestie fusce conubia donec nibh primis dictum porta.
                 </p>
-                <p>Lectus donec aliquam orci quam lectus mollis torquent rhoncus quam. Etiam velit non ut molestie aliquam leo dui etiam ut sem habitant vivamus nam risus.
+                <p>Interdum varius curae viverra fringilla fusce porttitor dictum posuere neque. Venenatis iaculis habitasse taciti aenean suscipit sapien libero sem elit. Eleifend tempus facilisis luctus mollis primis condimentum turpis eu ligula. Diam neque mi maecenas odio lectus auctor metus mauris arcu rhoncus fringilla dapibus risus aenean.
                 </p>
-                <p>In congue egestas bibendum feugiat
+                <p>Praesent justo imperdiet elit leo turpis imperdiet placerat ullamcorper rhoncus. Torquent mauris habitasse rutrum id est suspendisse porta porta consequat. Rhoncus fusce hendrerit ligula ad vel nullam quis curae ultrices suscipit ullamcorper tempor magna suscipit.
                 </p>
-                <p>Ut integer class a tristique sollicitudin quisque litora habitasse netus. Donec cras tempor pharetra justo cras hendrerit fusce iaculis mattis. Ultricies elit ligula adipiscing blandit ad mauris enim tristique lectus venenatis pharetra posuere libero semper.
+                <p>Feugiat mollis neque habitasse conubia diam eu elementum massa quisque. Bibendum viverra dictumst orci dui nisl cursus bibendum aliquam hac. Mollis laoreet etiam sem quam vel ut mollis morbi congue. Ad nullam mattis imperdiet enim tellus dictum a sociosqu dapibus. Congue convallis primis varius sociosqu rhoncus nam volutpat sociosqu semper. Ante semper curae est felis inceptos pulvinar augue ad platea. Euismod suspendisse viverra dui sapien ac pharetra quisque tempor himenaeos. Lectus fringilla convallis arcu sollicitudin phasellus pretium sed eget netus sollicitudin mi fames volutpat turpis.
                 </p>
-                <p>Interdum pellentesque suscipit bibendum purus accumsan rhoncus curabitur a duis. Scelerisque proin luctus vel potenti mollis magna molestie lectus primis. Turpis lacinia eget pretium morbi cras pellentesque semper commodo rutrum. Bibendum erat blandit aenean vulputate malesuada diam aliquam iaculis donec ac potenti suspendisse quis accumsan.
+                <p>Suspendisse curae tristique a iaculis sapien donec odio malesuada tempus. Quisque libero etiam id a semper habitasse neque convallis lacus. Egestas habitant proin placerat fames cras rutrum etiam cras phasellus. Lacus turpis primis lacinia morbi consectetur arcu sollicitudin fusce aliquet. Ligula duis tortor dui tempus placerat aliquet volutpat vestibulum ullamcorper. Litora aliquet hendrerit id augue nec imperdiet fermentum fringilla laoreet. Platea purus fringilla cursus scelerisque convallis risus himenaeos ut eu. Viverra etiam dui cursus faucibus odio porta hendrerit imperdiet tortor est metus litora vehicula neque.
                 </p>
-                <p>Blandit per feugiat consectetur eros id feugiat vitae purus lobortis. Potenti ante donec eros non habitant luctus venenatis lacinia morbi potenti dapibus aliquet non fringilla.
+                <p>Ligula adipiscing ut nunc ornare semper diam porttitor hendrerit mollis. Porttitor integer accumsan litora non mi dictumst lectus porta potenti. Viverra colus odio mauris quisque lacus litora aenean aenean mi. Pretium dapibus nunc habitant volutpat dictumst quis urna platea nostra donec primis eget per pretium.
                 </p>
               </div>
-              <div class="section__button"> <a href="#" class="btn">Mostrar más</a></div>
             </div>
           </div>
+          <div class="section__footer"> <a event-more-read class="btn">Mostrar más</a></div>
         </div>
       </section>
-      <section class="section--news"> 
+      <section class="section--news">
         <div class="section__wrap"> 
           <div class="section__header"> 
-            <h3 class="section__title">Noticias</h3>
+            <h3 class="h2 section__title">Noticias relacionadas</h3>
           </div>
           <div class="section__body"> 
             <div class="section__news"> 
@@ -153,9 +159,9 @@
                         <div class="bg"> <img src="img/uploads/8.png"></div>
                       </div>
                       <div class="article__body"><span class="article__date">19/11/2023</span>
-                        <h4 class="article__title">Justo aliquam habitasse condimentum porta bibendum pharetra metus
+                        <h4 class="article__title">Vehicula eu semper nibh inceptos orci interdum pulvinar
                         </h4>
-                        <p class="article__description">Vestibulum diam ultricies dui elementum posuere class ad euismod donec faucibus at malesuada tincidunt ornare.
+                        <p class="article__description">At eget nunc donec neque at proin nostra tristique mi metus tincidunt nullam tortor lacus.
                         </p><a href="#" class="btn btn--sm">Leer más<span class="fa fa-angle-right"></span></a>
                       </div>
                     </article>
@@ -166,9 +172,9 @@
                         <div class="bg"> <img src="img/uploads/9.png"></div>
                       </div>
                       <div class="article__body"><span class="article__date">19/11/2023</span>
-                        <h4 class="article__title">Odio venenatis sagittis aenean id dapibus hac rhoncus
+                        <h4 class="article__title">Libero congue colus quis vitae ullamcorper placerat netus
                         </h4>
-                        <p class="article__description">Lacus venenatis adipiscing tempus per aliquet tempor ac metus potenti suspendisse semper imperdiet fusce et.
+                        <p class="article__description">Vulputate facilisis in diam imperdiet eros purus in hac nulla convallis hac vestibulum metus purus.
                         </p><a href="#" class="btn btn--sm">Leer más<span class="fa fa-angle-right"></span></a>
                       </div>
                     </article>
@@ -179,9 +185,9 @@
                         <div class="bg"> <img src="img/uploads/10.png"></div>
                       </div>
                       <div class="article__body"><span class="article__date">19/11/2023</span>
-                        <h4 class="article__title">Mauris a lacinia ultrices ultrices cursus rutrum duis
+                        <h4 class="article__title">Convallis primis nisi proin maecenas malesuada lobortis viverra
                         </h4>
-                        <p class="article__description">Eleifend hac quisque a laoreet volutpat donec auctor sagittis fringilla ultrices habitant sagittis libero lacus.
+                        <p class="article__description">Pulvinar litora suscipit dictumst cubilia sapien tincidunt risus sapien ornare conubia donec porta mi lacus.
                         </p><a href="#" class="btn btn--sm">Leer más<span class="fa fa-angle-right"></span></a>
                       </div>
                     </article>
@@ -192,9 +198,9 @@
                         <div class="bg"> <img src="img/uploads/8.png"></div>
                       </div>
                       <div class="article__body"><span class="article__date">19/11/2023</span>
-                        <h4 class="article__title">Donec etiam molestie dictumst neque faucibus litora torquent
+                        <h4 class="article__title">Euismod venenatis lacus dapibus sapien conubia cubilia leo
                         </h4>
-                        <p class="article__description">Odio blandit turpis libero nullam tortor ligula quisque in neque platea nullam fames curabitur a.
+                        <p class="article__description">Vitae arcu cursus neque mi sed sapien curabitur aliquam aptent nunc cursus a condimentum rhoncus.
                         </p><a href="#" class="btn btn--sm">Leer más<span class="fa fa-angle-right"></span></a>
                       </div>
                     </article>
@@ -205,9 +211,9 @@
                         <div class="bg"> <img src="img/uploads/9.png"></div>
                       </div>
                       <div class="article__body"><span class="article__date">19/11/2023</span>
-                        <h4 class="article__title">Erat commodo tempor pellentesque scelerisque malesuada dui ultricies
+                        <h4 class="article__title">Justo purus mauris porttitor ac nibh condimentum auctor
                         </h4>
-                        <p class="article__description">Maecenas lacinia quam torquent colus sagittis sapien aliquet quisque ac mi a pellentesque porttitor dictumst.
+                        <p class="article__description">Ultrices aenean sollicitudin in primis habitasse volutpat ut tortor porta neque nam semper molestie pellentesque.
                         </p><a href="#" class="btn btn--sm">Leer más<span class="fa fa-angle-right"></span></a>
                       </div>
                     </article>
@@ -218,9 +224,9 @@
                         <div class="bg"> <img src="img/uploads/10.png"></div>
                       </div>
                       <div class="article__body"><span class="article__date">19/11/2023</span>
-                        <h4 class="article__title">Libero primis ultrices platea non pellentesque pellentesque facilisis
+                        <h4 class="article__title">Vestibulum pretium maecenas litora semper scelerisque colus habitant
                         </h4>
-                        <p class="article__description">Risus curae habitasse vel elementum est netus cursus sagittis conubia odio tincidunt facilisis enim adipiscing.
+                        <p class="article__description">Cubilia a congue condimentum orci lacus inceptos senectus himenaeos nec vivamus libero elit diam felis.
                         </p><a href="#" class="btn btn--sm">Leer más<span class="fa fa-angle-right"></span></a>
                       </div>
                     </article>
@@ -262,19 +268,18 @@
                   </div>
                 </div>
                 <div class="col-md-3"> 
-                  <div class="footer__newsletter"> 
-                    <p class="footer__description">Me gustaría saber más de Valora+</p>
-                    <div class="footer__form"> 
-                      <div class="form__element"> 
-                        <div class="form__input"> 
-                          <input type="email" placeholder="Escriba email">
-                        </div>
-                        <div class="form__button"> 
-                          <button> <img src="img/icons/icon-submit.png"></button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                  <!--.footer__newsletter 
+                  p.footer__description Me gustaría saber más de Valora+
+                  .footer__form 
+                  	.form__element 
+                  		.form__input 
+                  			input(type="email" placeholder="Escriba email")
+                  		
+                  		.form__button 
+                  			button 
+                  				img(src="img/icons/icon-submit.png")
+                  
+                  -->
                 </div>
               </div>
             </div>
