--- a/aboutus.html
+++ b/aboutus.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <link href="img/favicon.png" rel="shortcut icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="css/main.css?v=19195" rel="stylesheet" type="text/css">
-    <script src="js/main.js?v=19195" type="text/javascript"></script>
+    <link href="css/main.css?v=51408" rel="stylesheet" type="text/css">
+    <script src="js/main.js?v=51408" type="text/javascript"></script>
     <!-- Meta tags facebook-->
     <meta property="og:title" content="#">
     <meta property="og:description" content="#">
@@ -24,7 +24,8 @@
       <div class="header__primary">
         <div class="header__wrap">
           <div class="header__inner">
-            <div class="header__logo"><a href="index.html"><img src="img/icons/logo-valoramas.svg"></a></div>
+            <div class="header__logo header__logo--color"><a href="index.html"><img src="img/icons/logo-valoramas-white.svg"></a></div>
+            <div class="header__logo header__logo--white"><a href="index.html"><img src="img/icons/logo-valoramas.svg"></a></div>
             <div class="header__nav">
               <div class="header__nav__bg"></div>
               <div class="header__nav__nav">
@@ -47,7 +48,7 @@
                       <li><a href="brands.html">Empresas adheridas</a></li>
                       <li><a href="news.html">Noticias</a></li>
                       <li><a href="faq.html">FAQ</a></li>
-                      <li><a href="#">Contacto</a></li>
+                      <li><a data-goto=".section--contact">Contacto</a></li>
                     </ul>
                   </nav>
                 </div>
@@ -62,7 +63,7 @@
               <div class="header__nav__opacity"> </div>
               <div class="header__nav__nav"> 
                 <div class="header__nav__nav__header"> 
-                  <div class="header__nav__isotipo"> <img src="img/icons/logo-valoramas.svg"></div>
+                  <div class="header__nav__isotipo"> <img src="img/icons/logo-valoramas-white.svg"></div>
                   <div class="header__nav__close">
                     <div></div>
                     <div></div>
@@ -83,7 +84,7 @@
                       <li><a href="#">Empresas adheridas</a></li>
                       <li><a href="#">Noticias</a></li>
                       <li><a href="#">FAQ</a></li>
-                      <li><a href="#">Contacto</a></li>
+                      <li><a data-goto=".section--contact">Contacto</a></li>
                     </ul>
                   </div>
                 </div>
@@ -205,19 +206,18 @@
                   </div>
                 </div>
                 <div class="col-md-3"> 
-                  <div class="footer__newsletter"> 
-                    <p class="footer__description">Me gustaría saber más de Valora+</p>
-                    <div class="footer__form"> 
-                      <div class="form__element"> 
-                        <div class="form__input"> 
-                          <input type="email" placeholder="Escriba email">
-                        </div>
-                        <div class="form__button"> 
-                          <button> <img src="img/icons/icon-submit.png"></button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                  <!--.footer__newsletter 
+                  p.footer__description Me gustaría saber más de Valora+
+                  .footer__form 
+                  	.form__element 
+                  		.form__input 
+                  			input(type="email" placeholder="Escriba email")
+                  		
+                  		.form__button 
+                  			button 
+                  				img(src="img/icons/icon-submit.png")
+                  
+                  -->
                 </div>
               </div>
             </div>
